# mail-manager

./: .env.example  .gitignore  Makefile  PROJECT_OVERVIEW.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/agents/: docs-maintainer.agent.md
.github/instructions/: docker.instructions.md  docs.instructions.md  git.instructions.md  python.instructions.md  sql.instructions.md  vue.instructions.md
.github/prompts/: stabilize-and-plan.prompt.md
.github/skills/add-service/: SKILL.md
.github/skills/maintain-copilot-config/: SKILL.md
.github/skills/maintain-living-docs/: SKILL.md
db/: Dockerfile
db/migrations/: 001_initial_schema.sql  002_email_analyses.sql  003_user_and_accounts.sql  004_add_html_body_and_calendars.sql  005_phase_d.sql
docs/: COMPLETION_PLAN.md  FACTS.md  PLAN.md  README.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: accounts.ts  analysis.ts  auth.ts  calendar.ts  chat.ts  client.ts  emails.ts  index.ts  ingestion.ts  preprocessing.ts  settings.ts  stats.ts  summaries.ts  tasks.ts  topics.ts
frontend/src/assets/: main.css
frontend/src/components/: AppLayout.vue  ChatPanel.vue  HeaderBar.vue  SidebarNav.vue  ToastContainer.vue
frontend/src/components/ui/: BaseButton.vue  BaseCard.vue  BaseInput.vue  CopyMenu.vue  EmptyState.vue  SkeletonLoader.vue  StatCard.vue  StatusBadge.vue
frontend/src/composables/: useKeyboardShortcuts.ts  useMarkdown.ts  useToast.ts
frontend/src/router/: index.ts
frontend/src/stores/: account.ts  auth.ts  chat.ts  email.ts  summary.ts  task.ts  theme.ts  topic.ts
frontend/src/types/: index.ts
frontend/src/views/: AuthCallbackView.vue  CalendarView.vue  DashboardView.vue  EmailBrowserView.vue  LoginView.vue  SettingsView.vue  SetupView.vue  TaskManagerView.vue  TopicExplorerView.vue
services/bff/: Dockerfile  pyproject.toml
services/bff/src/bff/: auth_middleware.py  auth_repository.py  client.py  config.py  main.py
services/bff/src/bff/routers/: accounts.py  analysis.py  auth.py  calendar.py  chat.py  emails.py  ingestion.py  preprocessing.py  settings.py  stats.py  summaries.py  tasks.py  topics.py
services/bff/tests/: conftest.py  test_accounts.py  test_analysis.py  test_calendar.py  test_chat.py  test_docker.py  test_emails.py  test_health.py  test_ingestion.py  test_preprocessing.py  test_settings.py  test_stats.py  test_summaries.py  test_tasks.py  test_topics.py
services/calendar-sync/: Dockerfile  pyproject.toml
services/calendar-sync/src/calendar_sync/: calendar_repository.py  config.py  main.py  router.py  schemas.py
services/calendar-sync/src/calendar_sync/providers/: __init__.py  google.py  outlook.py
services/calendar-sync/tests/: conftest.py  test_providers.py  test_router.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/src/ingestion/: account_repository.py  config.py  converter.py  main.py  publisher.py  repository.py  router.py  schemas.py
services/ingestion/src/ingestion/providers/: __init__.py  gmail.py  outlook.py
services/ingestion/tests/: conftest.py  test_converter.py  test_email_endpoints.py  test_providers.py  test_repository.py  test_router.py  test_schemas.py
services/llm-analysis/: Dockerfile  pyproject.toml
services/llm-analysis/src/llm_analysis/: analyzer.py  chat.py  chat_router.py  config.py  events.py  llm_client.py  main.py  repository.py  router.py  schemas.py
services/llm-analysis/tests/: conftest.py  test_analyzer.py  test_chat.py  test_docker.py  test_llm_client.py  test_router.py  test_schemas.py
services/preprocessing/: Dockerfile  pyproject.toml
services/preprocessing/src/preprocessing/: cleaner.py  config.py  embedder.py  events.py  main.py  pipeline.py  repository.py  router.py  schemas.py
services/preprocessing/tests/: conftest.py  test_cleaner.py  test_docker.py  test_embedder.py  test_pipeline.py  test_router.py  test_schemas.py
services/summary-generation/: Dockerfile  pyproject.toml
services/summary-generation/src/summary_generation/: config.py  events.py  generator.py  llm_client.py  main.py  repository.py  router.py  schemas.py
services/summary-generation/tests/: conftest.py  test_docker.py  test_generator.py  test_llm_client.py  test_router.py  test_schemas.py
services/task-management/: Dockerfile  pyproject.toml
services/task-management/src/task_management/: config.py  events.py  extractor.py  google_tasks.py  main.py  repository.py  router.py  schemas.py  sync.py
services/task-management/tests/: conftest.py  test_docker.py  test_extractor.py  test_router.py  test_schemas.py  test_sync.py
services/topic-tracking/: Dockerfile  pyproject.toml
services/topic-tracking/src/topic_tracking/: config.py  events.py  main.py  matcher.py  repository.py  router.py  schemas.py
services/topic-tracking/tests/: conftest.py  test_docker.py  test_matcher.py  test_router.py  test_schemas.py
