[project]
name = "task-management"
version = "0.1.0"
description = "Task extraction and Google Tasks sync service for mail-manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "redis[hiredis]>=5.2.0",
    "google-auth>=2.36.0",
    "google-api-python-client>=2.160.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_management"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not docker'"
markers = [
    "docker: marks tests that require a running Docker container (deselect with '-m \"not docker\"')",
]
